cluster/kubernetes/dashborad/ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`k8s.yayuyo.yt`)
    services:
    - name: kubernetes-dashboard
      port: 443
      scheme: https
  tls:
    secretName: argo.yayuyo.yt
    certResolver: default
